# internal/data/ent/schema/user.go
@@ -1,0 +1,33 @@
+package schema
+
+import (
+	"time"
+
+	"entgo.io/ent"
+	"entgo.io/ent/schema/field"
+)
+
+// User holds the schema definition for the User entity.
+type User struct {
+	ent.Schema
+}
+
+// Fields of the User.
+func (User) Fields() []ent.Field {
+	return []ent.Field{
+		field.Int64("id"),
+		field.String("username"),
+		field.String("email"),
+		field.String("password"),
+		field.String("bio").Default(""),
+		field.String("image").Default(""),
+		field.Time("created_at").Default(time.Now()),
+		field.Time("updated_at").Default(time.Now()),
+		field.Time("deleted_at").Optional(),
+	}
+}
+
+// Edges of the User.
+func (User) Edges() []ent.Edge {
+	return nil
+}
