# openapi.yaml
@@ -3,10 +3,45 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: ""
     version: 0.0.1
 paths:
+    /api/users:
+        post:
+            tags:
+                - UserApi
+            operationId: UserApi_Register
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/user.v1.RegisterRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/user.v1.UserReply'
+    /api/users/login:
+        post:
+            tags:
+                - UserApi
+            operationId: UserApi_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/user.v1.LoginRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/user.v1.UserReply'
     /helloworld/{name}:
         get:
             tags:
@@ -34,5 +69,51 @@ components:
                 message:
                     type: string
             description: The response message containing the greetings
+        user.v1.LoginRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/user.v1.LoginRequest_Data'
+        user.v1.LoginRequest_Data:
+            type: object
+            properties:
+                email:
+                    type: string
+                password:
+                    type: string
+        user.v1.RegisterRequest:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/user.v1.RegisterRequest_Data'
+        user.v1.RegisterRequest_Data:
+            type: object
+            properties:
+                email:
+                    type: string
+                username:
+                    type: string
+                password:
+                    type: string
+        user.v1.User:
+            type: object
+            properties:
+                email:
+                    type: string
+                token:
+                    type: string
+                username:
+                    type: string
+                bio:
+                    type: string
+                image:
+                    type: string
+        user.v1.UserReply:
+            type: object
+            properties:
+                user:
+                    $ref: '#/components/schemas/user.v1.User'
 tags:
     - name: Greeter
+      description: The greeting service definition.
+    - name: UserApi
